[gd_scene load_steps=6 format=3 uid="uid://4ohhu5aryk3p"]

[ext_resource type="PackedScene" uid="uid://dg8lmyc0ukc1u" path="res://individual_node_test.tscn" id="1_8cr15"]
[ext_resource type="Script" path="res://gui_main.gd" id="1_qvqwe"]
[ext_resource type="PackedScene" uid="uid://d1dw4yunexyww" path="res://Modal.tscn" id="3_a3yvw"]
[ext_resource type="Script" path="res://add_note_ui.gd" id="4_70acs"]
[ext_resource type="Script" path="res://scripts/save_location.gd" id="5_tkmw1"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qvqwe")

[node name="Collection1" type="VFlowContainer" parent="."]
layout_mode = 0
offset_right = 300.0
offset_bottom = 648.0

[node name="Control" parent="Collection1" instance=ExtResource("1_8cr15")]
layout_mode = 2

[node name="Control2" parent="Collection1" instance=ExtResource("1_8cr15")]
layout_mode = 2

[node name="Control3" parent="Collection1" instance=ExtResource("1_8cr15")]
layout_mode = 2

[node name="Control4" parent="Collection1" instance=ExtResource("1_8cr15")]
layout_mode = 2

[node name="Collection2" type="VFlowContainer" parent="."]
layout_mode = 0
offset_left = 444.0
offset_right = 744.0
offset_bottom = 648.0

[node name="Control" parent="Collection2" instance=ExtResource("1_8cr15")]
layout_mode = 2

[node name="Control2" parent="Collection2" instance=ExtResource("1_8cr15")]
layout_mode = 2

[node name="Control3" parent="Collection2" instance=ExtResource("1_8cr15")]
layout_mode = 2

[node name="Collection3" type="VFlowContainer" parent="."]
layout_mode = 0
offset_left = 853.0
offset_right = 1153.0
offset_bottom = 648.0

[node name="Control" parent="Collection3" instance=ExtResource("1_8cr15")]
layout_mode = 2

[node name="Control2" parent="Collection3" instance=ExtResource("1_8cr15")]
layout_mode = 2

[node name="ModalController" parent="." instance=ExtResource("3_a3yvw")]
visible = false
layout_mode = 1

[node name="Button" type="Button" parent="."]
top_level = true
layout_mode = 0
offset_left = 1072.0
offset_top = 616.0
offset_right = 1153.0
offset_bottom = 647.0
text = "Add Note
"
script = ExtResource("4_70acs")

[node name="Button2" type="Button" parent="."]
top_level = true
layout_mode = 0
offset_left = 918.0
offset_top = 616.0
offset_right = 1071.0
offset_bottom = 647.0
text = "open save location"
script = ExtResource("5_tkmw1")

[editable path="Collection1/Control"]
[editable path="Collection1/Control2"]
[editable path="Collection1/Control3"]
